🔧 FIX CRITICO: Corretto .vercelignore per non escludere app/api/

--- a/.vercelignore
+++ b/.vercelignore
@@ -1,5 +1,5 @@
-# Escludi la vecchia directory api/ per evitare conflitti
-api/
+# Escludi solo la directory api/ nella root (non app/api/)
+/api/
 # Escludi file di sviluppo
 .DS_Store
 *.log
