--- a/package.json
+++ b/package.json
@@ -8,31 +8,34 @@
     "build:clean": "rm -rf .next node_modules/.cache && npm run build",
     "start": "next start",
     "lint": "next lint",
-    "db:migrate": "node migrate-db.js",
+    "db:migrate": "netlify dev:exec drizzle-kit migrate",
     "db:seed": "node seed-db.ts",
-    "db:check": "node check-db.js"
+    "db:check": "node check-db.js",
+    "db:generate": "drizzle-kit generate",
+    "db:studio": "netlify dev:exec drizzle-kit studio"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
-    "@libsql/client": "^0.3.6",
-    "@lucia-auth/adapter-sqlite": "^3.0.2",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@types/bcryptjs": "^2.4.6",
+    "@types/pg": "^8.15.4",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.21",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucia": "^3.2.2",
+    "drizzle-orm": "^0.44.2",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "postcss": "^8.5.6",
+    "postgres": "^3.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.59.0",
+    "react-is": "^19.1.0",
     "recharts": "^3.0.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17",
@@ -45,6 +48,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
     "tw-animate-css": "^1.3.5",
